<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroGisterActivity!</string>
    <string name="app_name">AndroGister</string>
    <string name="pickerNewEntityText">"Créer un nouveau enregistrement"</string>

    <!-- Action -->
    <string name="all">Tous</string>

    
    <!-- Digit -->
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="div">\u00f7</string>
    <string name="mul">\u00d7</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="del">\u003c</string>
    <string name="clear">C</string>
    <string name="invSign">\u00b1</string> <!-- +/- -->
    
    
    <!-- Action -->
    <string name="add">Ajouter</string>
    <string name="edit">Editer</string>
    <string name="delete">Supprimer</string>
    <string name="menu_done">"OK"</string>
    <string name="menu_doNotSave">"Annuler"</string>

    <!-- Menu -->
    <string name="menu_security_preference">Sécurité</string>
    <string name="menu_preference">Préférence</string>
    <string name="menu_admin_user">Utilisateurs</string>
    <string name="menu_search">Rechercher</string>

    <!-- Search -->
    <string name="search_person_label">Rechercher une personne</string>
    <string name="search_person_hint">Rech. nom ou un matricule</string>
    <string name="search_user_label">Rechercher un utilisateur</string>
    <string name="search_user_hint">Rech. un utilisateur</string>

    <!-- Notification -->
    <string name="order_service_notification_started">Androgister Service démarré</string>

    <!-- Preference -->
    <string name="pref_category_general">Général</string>
    <string name="pref_device_id">Identifiant Machine</string>

    <!-- Button -->
    <string name="button_order_edit">Modifier</string>
    <string name="button_order_delete">Supprimer</string>

    <!-- Basket -->
    <string name="basket_sum">Total</string>

    <!-- Basket Keyboard -->
    <string name="kyb_ask_save_basket_credit">Credit</string>
    <string name="kyb_ask_save_basket_cash">Cash</string>
    <string name="kyb_order_view_list">Liste des commandes</string>
    <string name="kyb_person_view_list">Liste des personnes</string>

    <!-- Model Order -->
    <string name="order_number">N°</string>
    <string name="order_uuid">Id</string>
    <string name="order_date">Date</string>
    <string name="order_price">Total</string>
    <string name="order_status">Statut</string>

    <!-- Search Forms -->
    <string name="search_instructions">Utiliser la zone de saisie pour affiner la recherche</string>
    <string name="search_no_results">Aucune résultat trouvé</string>

    <plurals name="search_results">
        <item quantity="one">Un résultat trouvé: </item>
        <item quantity="other">%1$d résultats trouvés: </item>
    </plurals>

    <string name="item_selected_title">Items Sélectionnés</string>

    <plurals name="item_selected">
        <item quantity="one">1 sélectionné</item>
        <item quantity="other">%d sélectionnés</item>
    </plurals>

    <!-- Model User -->
    <string name="user_firstname">Prénom</string>
    <string name="user_lastname">Nom de famille</string>
    <string name="user_matricule">Maticule</string>

    <!-- Model Person -->
    <string name="person_firstname">Prénom</string>
    <string name="person_lastname">Nom de famille</string>
    <string name="person_matricule">Maticule</string>

    <!-- Model Product -->
    <string name="product_name">Nom du Produit</string>
    <string name="product_description">Description du Produit</string>
    <string name="product_price_ht">Prix HT</string>
    <string name="product_tag">Etiquette du produit</string>
    <string name="product_taxe">TVA</string>

    <plurals name="product_delete_constraints">
        <item quantity="one">Suppression impossible : 1 produit lié</item>
        <item quantity="other">Suppression impossible : %d produits liés</item>
    </plurals>

    <!-- Photo -->
    <string name="photoPickerNotFoundText" msgid="6247290728908599701" product="tablet">"Aucune image n'est disponible sur la tablette."</string>
    <string name="photoPickerNotFoundText" msgid="431331662154342581" product="default">"Aucune image disponible sur le téléphone."</string>
    <string name="use_photo_as_primary" msgid="8807110122951157246">"Utiliser cette photo"</string>
    <string name="removePhoto" msgid="4898105274130284565">"Supprimer la photo"</string>
    <string name="take_photo" msgid="7496128293167402354">"Prendre une photo"</string>
    <string name="take_new_photo" msgid="7341354729436576304">"Prendre une autre photo"</string>
     <string name="pick_photo" msgid="3746334626214970837">"Sélectionner une photo dans la galerie"</string>
    <string name="pick_new_photo" msgid="7962368009197147617">"Sélectionner une autre photo dans la galerie"</string>
 
    

    <!-- Model Taxe -->
    <string name="taxe_name">Nom de la Taxe</string>
    <string name="taxe_percent">Taxe in %</string>

    <!-- Model Tag -->
    <string name="tag_name">Nom du Tag</string>
    <string name="tag_color">Couleur du Tag</string>
    <string name="tag_color_picker">Palette de couleur</string>

    <!-- Model Catalog -->
    <string name="catalog_name">Nom du Catalogue</string>
    <string name="catalog_enabled">Activé</string>

</resources>